--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cats</title>
+    <title>Random Cat Generator</title>
+    <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lexend:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="container bg-dark" >
-    <h1 class="bg-primary text-white p-5 rounded shadow-lg text-center">Random Cat Generator</h1>
-    <div class="card" style="width: 25rem;">
-        <img id="randomImage" src="no image.jpg" class="card-img-top" alt="...">
-          <button id="generate" class="btn btn-primary ">Generate your random cat</button>
-      </div>
-      
+<body>
+    <div>
+        <h1 class="text-white p-5 rounded shadow-lg text-center Lexend title">Random Cat Generator</h1>
+        <div class="...">
+            <div class="card">
+                <img id="randomImage" src="no image.jpg" class="card-img-top card-img" alt="...">
+                <button id="generate" class="btn Lexend">Generate your random cat</button>
+            </div>
+        </div>
+    </div>
     
    
     <script src="script.js"></script>
