--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 </head>
 <body>
     <div>
-        <h1 class="text-white p-5 rounded shadow-lg text-center Lexend title">Random Cat Generator</h1>
-        <div class="...">
-            <div class="card">
-                <img id="randomImage" src="no image.jpg" class="card-img-top card-img" alt="...">
-                <button id="generate" class="btn Lexend">Generate your random cat</button>
-            </div>
+        <h1 class="text-white p-5 shadow-lg text-center Lexend title">Random Cat Generator</h1>
+        <div class="card">
+            <img id="randomImage" src="no image.jpg" class="card-img-top card-img" alt="...">
+            <button id="generate" class="btn Lexend">Generate your random cat</button>
         </div>
     </div>
     
