Finished (for now?)
-spinning cat head animation
-changed button a little
-changed images from contain to cover

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <body>
     <div>
         <h1 class="text-white p-5 shadow-lg text-center Lexend title">Random Cat Generator</h1>
+        <div class="center">
+            <img class="cat-head" src="Images/cat-head.png" alt="...">
+        </div>
         <div class="card">
             <img id="randomImage" src="no image.jpg" class="card-img-top card-img" alt="...">
             <button id="generate" class="btn Lexend">Generate your random cat</button>
         </div>
-    </div>
-    
-   
+    </div> 
     <script src="script.js"></script>
 </body>
 </html>
