--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1 class="text-white p-5 shadow-lg text-center Lexend title">Random Cat Generator</h1>
-        <div class="center">
-            <img class="cat-head" src="Images/cat-head.png" alt="...">
-        </div>
-        <div class="card">
-            <img id="randomImage" src="no image.jpg" class="card-img-top card-img" alt="...">
-            <button id="generate" class="btn Lexend">Generate your random cat</button>
-        </div>
-    </div> 
+    <h1 class="text-white p-5 text-center Lexend title">Random Cat Generator</h1>
+    <div class="center">
+        <img class="cat-head" src="Images/cat-head.png" alt="...">
+    </div>
+    <div class="card">
+        <img id="randomImage" src="no image.jpg" class="card-img-top card-img" alt="...">
+        <button id="generate" class="btn Lexend">Generate your random cat</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
